--- a/weeks/week_08.qmd
+++ b/weeks/week_08.qmd
@@ -62,7 +62,7 @@ During class you will be working in groups discussing the following:
 ### Day 13
 
 -   Questions from HW 6
-    -   Book: 8.28 (warm-up), 8.34, 8.38 (modified; see assignment)
+    -   Book: 8.28 (warm-up), 8.32, 8.34, 8.38 (modified; see assignment)
 
 ### Day 14
 
