--- a/weeks/week_08.qmd
+++ b/weeks/week_08.qmd
@@ -39,15 +39,13 @@ editor_options:
 | Day | Topic | Slides: html | Slides: pdf | Slides: web-page | Slides with notes | Recording Link | Duration | Code: qmd | Code: html |
 |--------|--------|--------|--------|--------|--------|--------|--------|--------|--------|
 | 13 | Chi-sqr intro | [Day 13: slides 1-10](../slides/Day13_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day13_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day13_bsta511_md.qmd) | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day13_bsta511_notes.pdf) | [Day 13 Part 1](https://echo360.org/lesson/1e9ef7fd-7150-4651-8d22-d156f73b70f0/classroom#sortDirection=desc) | 18 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day13_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day13_bsta511_code.qmd) |
-|  | Chi-sqr test: 8.3.1 -  8.3.4 | [Day 13: slides 11-17](../slides/Day13_bsta511.qmd#/expected-counts-if-variables-are-independent) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day13_bsta511_md.qmd#expected-counts-if-variables-are-independent) | same | [Day 13 Part 2](https://echo360.org/lesson/4f847964-7d54-4575-8631-7aa657293b07/classroom#sortDirection=desc) | 23 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day13_bsta511_code.qmd#expected-counts-if-variables-are-independent) |
-|  | Chi-sqr in R, Fisher's Exact Test, Chi-sqr vs. prop's | [Day 13: R tip, slides 18-33](../slides/Day13_bsta511.qmd#/depression-vs.-physical-activity-dataset) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day13_bsta511_md.qmd#depression-vs.-physical-activity-dataset) | same | [Day 13 Part 3](https://echo360.org/lesson/0d8fbd2c-e88e-410d-ba61-175d4c7cc29b/classroom#sortDirection=desc) | 57 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day13_bsta511_code.qmd#depression-vs.-physical-activity-dataset) |
+|  | Chi-sqr test: 8.3.1 - 8.3.4 | [Day 13: slides 11-17](../slides/Day13_bsta511.qmd#/expected-counts-if-variables-are-independent) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day13_bsta511_md.qmd#expected-counts-if-variables-are-independent) | same | [Day 13 Part 2](https://echo360.org/lesson/4f847964-7d54-4575-8631-7aa657293b07/classroom#sortDirection=desc) | 23 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day13_bsta511_code.qmd#expected-counts-if-variables-are-independent) |
+|  | Chi-sqr in R, Fisher's Exact Test, Chi-sqr vs. prop's | [Day 13: R tip, slides 18-33](../slides/Day13_bsta511.qmd#/depression-vs.-physical-activity-dataset) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day13_bsta511_md.qmd#depression-vs.-physical-activity-dataset) | same | [Day 13 Part 3](https://echo360.org/lesson/5b2570fb-44f0-49f7-b149-779ad8c7f92a/classroom#sortDirection=desc) | 57 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day13_bsta511_code.qmd#depression-vs.-physical-activity-dataset) |
 | 14 | ANOVA intro | [Day 14: slides 1-15](../slides/Day14_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day14_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day14_bsta511_md.qmd) | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day14_bsta511_notes.pdf) | [Day 14 Part 1](https://echo360.org/lesson/7cddf89e-c0ea-49cf-a302-aafcf72db065/classroom#sortDirection=desc) | 29 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day14_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day14_bsta511_code.qmd) |
 |  | ANOVA table | [Day 14: slides 16-28](../slides/Day14_bsta511.qmd#/anova-analysis-of-variance) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day14_bsta511_md.qmd#anova-analysis-of-variance) | same | [Day 14 Part 2](https://echo360.org/lesson/56dbcb9a-b61e-4b75-9071-c1ed45be37f4/classroom#sortDirection=desc) | 27 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day14_bsta511_code.qmd#anova-analysis-of-variance) |
 |  | ANOVA in R, conditions, post-hoc testing | [Day 14: slides 29-47](../slides/Day14_bsta511.qmd#/thinking-about-the-f-statistic) | same | [{{< iconify streamline web size=20px >}}](../slides_md/Day14_bsta511_md.qmd#thinking-about-the-f-statistic) | same | [Day 14 Part 3](https://echo360.org/lesson/8682334b-aacc-4684-861f-4981f7314fe4/classroom#sortDirection=desc) | 39 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day14_bsta511_code.qmd#thinking-about-the-f-statistic) |
 
 : {.striped .hover tbl-colwidths="\[3, 10, 8, 5, 5, 5, 6, 6, 5, 5\]"}
-
-
 
 ## Datasets
 
@@ -76,3 +74,16 @@ During class you will be working in groups discussing the following:
 
 -   [HW 6](../homework/HW_6_F24_bsta511.qmd) covers Days 13 -14 and is due on Sat, 11/23
 -   Check out this [spreadsheet](https://docs.google.com/spreadsheets/d/1k_NivXZftdlRgRyTT3fUZCndW4eoXCzAs-DEIml6K3Y/edit?gid=0#gid=0) for typos in book.
+
+## Exam 2 information {#sec-Exam2info}
+
+-   Exam 2 will be on Mon, Oct. 30th
+-   Samples of [past exam questions](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/Exam_samples/Exam_2_samples_Ch4_5.1-5.4_8.1-8.4.pdf) and [answers](https://sakai.ohsu.edu/access/content/group/BSTA-511-1-AA-F24/Exam_samples/Exam_2_samples_Ch4_5.1-5.4_8.1-8.4_answers.pdf) (on Sakai)
+-   Material will cover **Days 8-13**,
+    -   which is approximately **Ch 4, 5.1-5.4, 8.1-8.4** from the textbook, and supplementary material.
+-   The exam will be in-class and handwritten. *Bring a calculator.*
+-   You may bring one page of notes on an 8.5” x 11” sheet of paper.
+    -   You may use both sides.
+    -   You may type your notes.
+    -   You may **not** use screenshots of the notes or textbook
+    -   You will be turning in the page of notes with the exam, so please add your name to the sheet.
