--- a/weeks/week_10.qmd
+++ b/weeks/week_10.qmd
@@ -55,9 +55,19 @@ All datasets can be found on [GitHub](https://github.com/niederhausen/BSTA_511_F
 
 During class you will be working in groups discussing the following:
 
-### Day 16 - TBD
+### Day 16
 
-### Day 17 - TBD
+-   Questions from HW 7
+    -   Book 
+        -   Warm-up: 6.12
+        -   6.28, 6.32
+    -   R2 (a) - (j): Life expectancy vs. CO2 emissions
+
+### Day 17
+
+-   Questions from HW 7
+    -   Nonparametric Tests: NPT 1-3 
+
 
 ## Homework
 
