--- a/schedule.qmd
+++ b/schedule.qmd
@@ -39,5 +39,5 @@ editor_options:
 |  [10](weeks/week_10.qmd)| M 12/2  | **16**| Simple Linear Regression                                                                         | 6.3-6.4                                |
 |                         | W 12/4  | **17**| Non-parametric tests <br> (sign, signed-rank, rank-sum, <br> Kruskal-Wallis)                     | Extra                                  |
 |                         | Sa 12/7 |       | [HW 7 Due](homework/HW_7_F24_bsta511.qmd) (Days 15 - 17)                                         |                                        |
-|  11                     | M 12/9  |       | Review - catch up                                                                                |                                        |
+|  [11](weeks/week_11.qmd)| M 12/9  |       | Review - catch up                                                                                |                                        |
 |                         | W 12/11 |       | **Exam 3 due (take home): <br> Cumulative with a focus on Days 14-17**                           | **Ch 5.5, 6, <br> non-parametric**     |
