--- a/weeks/week_10.qmd
+++ b/weeks/week_10.qmd
@@ -37,7 +37,7 @@ editor_options:
 
 | Day | Topic | Slides: html | Slides: pdf | Slides: web-page | Slides with notes | Recording Link | Duration | Code: qmd | Code: html |
 |--------|--------|--------|--------|--------|--------|--------|--------|--------|--------|
-| 16 | Simple Linear Regression cont'd: 6.3-6.4 | [Day 16](../slides/Day16_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day16_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day16_bsta511_md.qmd) |  | [Day 16](https://echo360.org/lesson/27f794ca-3c07-46ef-8bd1-76c4ef035f28/classroom#sortDirection=desc) \* |  1 hr 26 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day16_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day16_bsta511_code.qmd) |
+| 16 | Simple Linear Regression cont'd: 6.3-6.4 | [Day 16](../slides/Day16_bsta511.qmd) | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day16_bsta511.pdf) | [{{< iconify streamline web size=20px >}}](../slides_md/Day16_bsta511_md.qmd) |  | [Day 16](https://echo360.org/lesson/27f794ca-3c07-46ef-8bd1-76c4ef035f28/classroom#sortDirection=desc) \* | 1 hr 26 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day16_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day16_bsta511_code.qmd) |
 | 17 | Sign test & Sign-rank test: Slides 1-31 |  | [{{< iconify bi file-earmark-pdf-fill size=20px >}}](../slides_pdf/Day17_bsta511.pdf) |  | [{{< iconify pepicons-pop pen-circle-filled size=20px >}}](../slides_notes/Day17_bsta511_notes.pdf) | [Day 17 Part 1](https://echo360.org/lesson/768baa9b-1d17-45c0-812d-4cf7e4ffc2b4/classroom#sortDirection=desc) | 56 min | [{{< iconify simple-icons:quarto >}}](https://github.com/niederhausen/BSTA_511_F24/blob/main/slides_code/Day17_bsta511_code.qmd) | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day17_bsta511_code.qmd) |
 |  | Wilcoxon rank-sum test, Kruskal-Wallis test: Slides 32-53 |  | same |  | same | [Day 17 Part 2](https://echo360.org/lesson/8cff92b0-504e-4360-8a7a-45aef5cbee09/classroom#sortDirection=desc) | 41 min | same | [{{< iconify ph file-html-light size=25px >}}](../slides_code/Day17_bsta511_code.qmd#wilcoxon-rank-sum-test-1) |
 
@@ -58,16 +58,15 @@ During class you will be working in groups discussing the following:
 ### Day 16
 
 -   Questions from HW 7
-    -   Book 
+    -   Book
         -   Warm-up: 6.12
         -   6.28, 6.32
-    -   R2 (a) - (j): Life expectancy vs. CO2 emissions
+    -   R2 (a) - (j): Life expectancy vs. CO~2~ emissions
 
 ### Day 17
 
 -   Questions from HW 7
-    -   Nonparametric Tests: NPT 1-3 
-
+    -   Nonparametric Tests: NPT 1-3
 
 ## Homework
 
