--- a/weeks/week_11.qmd
+++ b/weeks/week_11.qmd
@@ -32,13 +32,12 @@ editor_options:
 :::::
 
 
-## Exam 3 - part 1 posted
+## Exam 3 - final version posted
 
 
 * Exam 3 is due on **12/13/24 at 5 pm**
-* Version 1 of the exam (includes only the first of the two questions) is posted in the [Assignments](https://sakai.ohsu.edu/portal/site/BSTA-511-1-AA-F24/tool/8cee686f-e5e0-401c-a7c1-b097fc8eb9a9) section of Sakai.
-    * **Version 2 will be posted on Saturday evening.**
-    * Note that the attachments of the assignment include both the qmd and html files for the exam, as well as the datasets.
+* Final version of the exam is now posted (Exam3_BSTA511_F24_v2.qmd/.html) in the [Assignments](https://sakai.ohsu.edu/portal/site/BSTA-511-1-AA-F24/tool/8cee686f-e5e0-401c-a7c1-b097fc8eb9a9) section of Sakai.
+    * Note that the attachments of the assignment include both the qmd and html files for the exam, as well as two datasets.
 
 
 ## Webex link for Week 11
